force-app/main/default/objects/Case/fields/Accident_Place__c.field-meta.xml
<CustomField>
    <fullName>Accident_Place__c</fullName>
    <formula>Contact.Accident_Place__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accident Place</label>
    <type>Text</type>
</CustomField>