force-app/main/default/objects/Case/fields/Accident_Place_Claim__c.field-meta.xml
<CustomField>
    <fullName>Accident_Place_Claim__c</fullName>
    <inlineHelpText>Lokasi Kejadian</inlineHelpText>
    <label>Accident Place</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>