force-app/main/default/objects/Case/fields/Account_Number_Report__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Report__c</fullName>
    <formula>TEXT(Account_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number Report</label>
    <type>Text</type>
</CustomField>