force-app/main/default/objects/Case/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <formula>IF( Entity__c = &quot;AFI&quot;  &amp;&amp; (Response_Time_min__c &gt; 0 &amp;&amp; Response_Time_min__c &lt;= 300), &quot;Meet&quot;,
IF( (Entity__c = &quot;AMFS&quot; || Entity__c = &quot;MAGI&quot;) &amp;&amp;  (Response_Time_min__c &gt; 0 &amp;&amp; Response_Time_min__c &lt;= 1440), &quot;Meet&quot;,
&quot;Not Meet&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achievement</label>
    <type>Text</type>
</CustomField>