force-app/main/default/objects/Case/fields/Activity_Log__c.field-meta.xml
<CustomField>
    <fullName>Activity_Log__c</fullName>
    <label>Activity Log</label>
    <length>100</length>
    <type>Text</type>
</CustomField>