force-app/main/default/objects/Case/fields/address_of_service__c.field-meta.xml
<CustomField>
    <fullName>address_of_service__c</fullName>
    <label>address of service</label>
    <length>24304</length>
    <type>LongTextArea</type>
</CustomField>