force-app/main/default/objects/Case/fields/AFI__c.field-meta.xml
<CustomField>
    <fullName>AFI__c</fullName>
    <formula>IF( Entity__c = &apos;AFI&apos;, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AFI</label>
    <type>Text</type>
</CustomField>