force-app/main/default/objects/Case/fields/Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Code__c</fullName>
    <formula>Contact.Agent_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Code</label>
    <type>Text</type>
</CustomField>