force-app/main/default/objects/Case/fields/Agent_Queue_ID_Log_Notification__c.field-meta.xml
<CustomField>
    <fullName>Agent_Queue_ID_Log_Notification__c</fullName>
    <formula>IF(Owner:User.Agent__c == TRUE,  Owner:User.Agent_Queue_ID_Log_Notification__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Queue ID (Log Notification)</label>
    <type>Text</type>
</CustomField>