force-app/main/default/objects/Case/fields/Agent_Status__c.field-meta.xml
<CustomField>
    <fullName>Agent_Status__c</fullName>
    <formula>Contact.Agent_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Status</label>
    <type>Text</type>
</CustomField>