force-app/main/default/objects/Case/fields/Aging_Closed_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Aging_Closed_Complaint__c</fullName>
    <formula>IF(IsClosed, ClosedDate - CreatedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Closed Complaint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>