force-app/main/default/objects/Case/fields/Aging_Closed_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Aging_Closed_Working_Days__c</fullName>
    <formula>IF(IsClosed, 
(5*FLOOR((DATEVALUE(ClosedDate)-DATE(1900,1,1))/7) + 
MIN(5, MOD(DATEVALUE(ClosedDate)-DATE(1900,1,1), 7))) - 
(5*FLOOR((DATEVALUE(CreatedDate)-DATE(1900,1,1))/7) + 
MIN(5, MOD(DATEVALUE(CreatedDate)-DATE(1900,1,1), 7))), 
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Closed (Working Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>