force-app/main/default/objects/Case/fields/Already_Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Already_Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont Send ICF</label>
    <type>Checkbox</type>
</CustomField>