force-app/main/default/objects/Case/fields/AMFS__c.field-meta.xml
<CustomField>
    <fullName>AMFS__c</fullName>
    <formula>IF( Entity__c = &apos;AMFS&apos;, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMFS</label>
    <type>Text</type>
</CustomField>