force-app/main/default/objects/Case/fields/AMFS_Average_Handling_Time_Duration__c.field-meta.xml
<CustomField>
    <fullName>AMFS_Average_Handling_Time_Duration__c</fullName>
    <label>AMFS Average Handling Time Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>