force-app/main/default/objects/Case/fields/AMFS_Receive_on_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>AMFS_Receive_on_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMFS Receive on Business Hours?</label>
    <type>Checkbox</type>
</CustomField>