force-app/main/default/objects/Case/fields/AMFS_SLA_Target__c.field-meta.xml
<CustomField>
    <fullName>AMFS_SLA_Target__c</fullName>
    <label>AMFS SLA Target</label>
    <length>20</length>
    <type>Text</type>
</CustomField>