force-app/main/default/objects/Case/fields/AMFS_Total_Case_Time_Duration__c.field-meta.xml
<CustomField>
    <fullName>AMFS_Total_Case_Time_Duration__c</fullName>
    <label>AMFS Total Case Time Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>