force-app/main/default/objects/Case/fields/Amount_to_be_Debited__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Debited__c</fullName>
    <label>Amount to be Debited</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>