force-app/main/default/objects/Case/fields/Amount_to_be_Debited_Report__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Debited_Report__c</fullName>
    <formula>TEXT(Amount_to_be_Debited__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount to be Debited Report</label>
    <type>Text</type>
</CustomField>