force-app/main/default/objects/Case/fields/Appeal_Case_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Case_Complaint__c</fullName>
    <label>Appeal Case Complaint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>