force-app/main/default/objects/Case/fields/Approve_Paid__c.field-meta.xml
<CustomField>
    <fullName>Approve_Paid__c</fullName>
    <label>Approve &amp; Paid</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_Decision_AMFS__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Refund All Premium</fullName>
            </value>
            <value>
                <fullName>Refund with reduced charges (COI, COR, admin fee, etc)</fullName>
            </value>
            <value>
                <fullName>Waive penalty/charges</fullName>
            </value>
            <value>
                <fullName>Collectible premiums are refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>