force-app/main/default/objects/Case/fields/Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Track Process Builder</description>
    <label>Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>