force-app/main/default/objects/Case/fields/Back_Office_PIC__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>user to assign (especially for CHS)</inlineHelpText>
    <label>Back Office PIC</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR (3 AND 4))</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notContain</operation>
            <value>SPV</value>
        </filterItems>
        <filterItems>
            <field>User.Entity__c</field>
            <operation>equals</operation>
            <valueField>$User.Entity__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.Entity__c</field>
            <operation>equals</operation>
            <value>AFI, ALI</value>
        </filterItems>
        <filterItems>
            <field>$User.Entity__c</field>
            <operation>equals</operation>
            <value>AFI, ALI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>BackOffice</relationshipName>
    <type>Lookup</type>
</CustomField>