force-app/main/default/objects/Case/fields/Balance_ALI__c.field-meta.xml
<CustomField>
    <fullName>Balance_ALI__c</fullName>
    <formula>IF ( TEXT(Status) == &apos;Closed&apos;, 0,
Count_All_Incoming_Email_ALI__c - Count_All_Email_Pick_Up_SPV_ALI__c
- Count_Email_Respond_Agent_ALI__c +  Count_Email_Escalation_Agent_ALI__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>