force-app/main/default/objects/Case/fields/Bengkel__c.field-meta.xml
<CustomField>
    <fullName>Bengkel__c</fullName>
    <label>Repair Shop</label>
    <length>100</length>
    <type>Text</type>
</CustomField>