force-app/main/default/objects/Case/fields/BOD_Type__c.field-meta.xml
<CustomField>
    <fullName>BOD_Type__c</fullName>
    <label>BOD Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 0</fullName>
            </value>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>