force-app/main/default/objects/Case/fields/Branch_AGI__c.field-meta.xml
<CustomField>
    <fullName>Branch_AGI__c</fullName>
    <label>Branch AGI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JKT - Head Office</fullName>
            </value>
            <value>
                <fullName>JKT - Permata Hijau</fullName>
            </value>
            <value>
                <fullName>JKT - PIK</fullName>
            </value>
            <value>
                <fullName>JKT - Tebet</fullName>
            </value>
            <value>
                <fullName>Bandung</fullName>
            </value>
            <value>
                <fullName>Medan</fullName>
            </value>
            <value>
                <fullName>Surabaya</fullName>
            </value>
            <value>
                <fullName>Semarang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>