force-app/main/default/objects/Case/fields/Bulan__c.field-meta.xml
<CustomField>
    <fullName>Bulan__c</fullName>
    <formula>CASE(MONTH(DATEVALUE(CreatedDate)), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3, &quot;MAR&quot;, 4, &quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10, &quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;, &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bulan</label>
    <type>Text</type>
</CustomField>