force-app/main/default/objects/Case/fields/Business_channel__c.field-meta.xml
<CustomField>
    <fullName>Business_channel__c</fullName>
    <label>Business channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leasing</fullName>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Direct Online</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Corporate Solution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Agency Online</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Alternate</fullName>
            </value>
            <value>
                <fullName>Direct - Travel Agent</fullName>
            </value>
            <value>
                <fullName>Direct - Corp. Partner</fullName>
            </value>
            <value>
                <fullName>Fullerton</fullName>
            </value>
            <value>
                <fullName>Inbranch</fullName>
            </value>
            <value>
                <fullName>DPLK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>