force-app/main/default/objects/Case/fields/Call_Line_Retention__c.field-meta.xml
<CustomField>
    <fullName>Call_Line_Retention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Line Retention</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>