force-app/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>IF(Age__c &gt; 30, &quot;&gt; 30 days&quot;, 
IF(Age__c &gt; 14 &amp;&amp; Age__c &lt;= 30 , &quot;&lt;= 30 days&quot;, 
IF(Age__c &gt; 7 &amp;&amp; Age__c &lt;= 14, &quot;&lt;= 14 days&quot;, 
&quot;&lt;= 7 days&quot; )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <type>Text</type>
</CustomField>