force-app/main/default/objects/Case/fields/Case_Created_in_hour__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_in_hour__c</fullName>
    <description>LEFT(TEXT(CreatedDate),LEN(TEXT(CreatedDate))-4)

Indonesia + 7</description>
    <formula>LEFT(TEXT((CreatedDate + ((7*60))/1440)),LEN(TEXT(CreatedDate))-7) &amp;&apos;:00&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Created in hour</label>
    <type>Text</type>
</CustomField>