force-app/main/default/objects/Case/fields/Case_Error__c.field-meta.xml
<CustomField>
    <fullName>Case_Error__c</fullName>
    <label>Case Error?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CHS_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>