force-app/main/default/objects/Case/fields/Case_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Case_Escalation__c</fullName>
    <label>Case Escalation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>