force-app/main/default/objects/Case/fields/Case_Group_No__c.field-meta.xml
<CustomField>
    <fullName>Case_Group_No__c</fullName>
    <formula>IF ( ISBLANK(ParentId), CaseNumber, Parent.CaseNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Group No</label>
    <type>Text</type>
</CustomField>