force-app/main/default/objects/Case/fields/Case_Group_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Group_Open_Date__c</fullName>
    <formula>DATEVALUE(Parent.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Group Open Date</label>
    <type>Date</type>
</CustomField>