force-app/main/default/objects/Case/fields/Case_No_External__c.field-meta.xml
<CustomField>
    <fullName>Case_No_External__c</fullName>
    <externalId>true</externalId>
    <label>Case No (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>