force-app/main/default/objects/Case/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <formula>IF(BEGINS(OwnerId, &apos;005&apos;), Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, Owner:Queue.QueueName)</formula>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>