force-app/main/default/objects/Case/fields/Case_Owner_CCC__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_CCC__c</fullName>
    <formula>IF (CreatedBy.Profile.Name != &apos;System Administrator&apos;, 
CreatedBy.FirstName &amp; &apos; &apos;&amp; CreatedBy.LastName, 
Owner:User.FirstName &amp; &apos; &apos;&amp; Owner:User.LastName 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner CCC</label>
    <type>Text</type>
</CustomField>