force-app/main/default/objects/Case/fields/Case_Phone__c.field-meta.xml
<CustomField>
    <fullName>Case_Phone__c</fullName>
    <label>QR Phone</label>
    <type>Phone</type>
</CustomField>