force-app/main/default/objects/Case/fields/Case_Sensitive_Customer__c.field-meta.xml
<CustomField>
    <fullName>Case_Sensitive_Customer__c</fullName>
    <label>Case Sensitive Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>