force-app/main/default/objects/Case/fields/casetype_old_new_not_equal__c.field-meta.xml
<CustomField>
    <fullName>casetype_old_new_not_equal__c</fullName>
    <formula>if( text(Case_Type__c) &lt;&gt;  text(Case_Type_Config__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>casetype_old_new_not_equal</label>
    <type>Checkbox</type>
</CustomField>