force-app/main/default/objects/Case/fields/CEMAIL__c.field-meta.xml
<CustomField>
    <fullName>CEMAIL__c</fullName>
    <formula>IF(TEXT(TS_Send_To__c) = &apos;Email Address&apos;, &apos;Y&apos;, &apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEMAIL</label>
    <type>Text</type>
</CustomField>