force-app/main/default/objects/Case/fields/Central_Operation_Head__c.field-meta.xml
<CustomField>
    <fullName>Central_Operation_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Central Operation Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>